# xmonad-wallpaperhook

./: LICENSE  README.md  xmonad-wallpaperhook.cabal
XMonad/Hooks/: WallpaperSetter.hs
src/XMonad/Hooks/: WallpaperSetter.hs
