name:                xmonad-wallpaperhook
version:             0.1.0.0
synopsis:            XMonad log hook to assign wallpapers to workspaces
description:         Detects change of visible workspaces and updates
                     the wallpapers accordingly. Add it to your log hook,
                     providing a wallpaper configuration and now on every
                     change of the visible workspaces it will search for
                     the correct images and set them with feh.
                     Images are automatically rotated by 90 degrees to look
                     good on vertical screens.
category:            System
license:             BSD3
license-file:        LICENSE
author:              Anton Pirogov
maintainer:          anton.pirogov at gmail.com
copyright:           2014, Anton Pirogov
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <5
                     , containers
                     , process
                     , directory
                     , filepath
                     , text
                     , random
                     , xmonad >=0.11
                     , xmonad-contrib >=0.11
  hs-source-dirs:      src
  exposed-modules:     XMonad.Hooks.WallpaperSetter
  default-language:    Haskell2010

source-repository head
  type:              git
  location:          git://github.com/apirogov/xmonad-wallpaperhook

